# VPN-Wizard

./: .gitignore  CODEX_RULES.md  OPENVPN-QUICKSTART.md  PLAN.md  README-reality.md  README-wg.md  RUNBOOK.md  SPEC.md  TELEGRAM.md  ovpn-add-client.server.sh  ovpn-add-client.sh  pyproject.toml  railway.json  requirements.txt  wg-setup.sh  xray-reality-setup.sh
src/vpn_wizard/: __init__.py  cli.py  combined.py  core.py  gui.py  qr.py  server.py  tg_bot.py
tests/: test_cli.py  test_core.py  test_server.py
web/miniapp/: app.js  config.js  index.html  style.css
